feat: custom jwt authenticator response
